--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="#home" class="w3-bar-item w3-button">J&amp;J Trekking</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> CHI SIAMO</a>
-    <a href="#tracks" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> ITINERARI</a>
+    <a href="#home" class="w3-bar-item w3-button w3-text-black">J&amp;J Trekking</a>
+    <a href="#about" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fa fa-user"></i> CHI SIAMO</a>
+    <a href="#tracks" class="w3-bar-item w3-button w3-hide-small w3-text-black"><i class="fa fa-th"></i> ITINERARI</a>
   </div>
 
   <!-- Navbar on small screens -->
@@ -54,33 +54,30 @@
 
       <div class="w3-third w3-section">
           <div class="w3-card-2">
-          <img src="https://www.w3schools.com/w3images/mountains.jpg" style="width:100%">
+          <img src="/img/mountains.jpg" style="width:100%">
               <div class="w3-container w3-white">
-                  <h4>Cinque Terre</h4>
-                  <p>The Cinque Terre (five lands) is a portion of the Italian Riviera. The coastline with five villages: Monterosso, Vernazza, Corniglia, Manarola, and Riomaggiore
-                  is a UNESCO World Heritage Site.</p>
+                  <h4>Gran Sasso</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
           </div>
       </div>
 
       <div class="w3-third w3-section">
           <div class="w3-card-2">
-          <img src="https://www.w3schools.com/w3images/mountains.jpg" style="width:100%">
+          <img src="/img/mountains.jpg" style="width:100%">
               <div class="w3-container w3-white">
-                  <h4>Cinque Terre</h4>
-                  <p>The Cinque Terre (five lands) is a portion of the Italian Riviera. The coastline with five villages: Monterosso, Vernazza, Corniglia, Manarola, and Riomaggiore
-                  is a UNESCO World Heritage Site.</p>
+                  <h4>Monte Gennaro</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
           </div>
       </div>
 
       <div class="w3-third w3-section">
           <div class="w3-card-2">
-          <img src="https://www.w3schools.com/w3images/mountains.jpg" style="width:100%">
+          <img src="/img/mountains.jpg" style="width:100%">
               <div class="w3-container w3-white">
-                  <h4>Cinque Terre</h4>
-                  <p>The Cinque Terre (five lands) is a portion of the Italian Riviera. The coastline with five villages: Monterosso, Vernazza, Corniglia, Manarola, and Riomaggiore
-                  is a UNESCO World Heritage Site.</p>
+                  <h4>Carseolani</h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               </div>
           </div>
       </div>
@@ -96,10 +93,9 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>Torna in cima</a>
+<footer class="w3-center w3-gray w3-padding-16">
   <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <p>J&amp;J Trekking</p>
   </div>
 </footer>
 
