--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@ layout: home
         <div class="w3-card-2 w3-margin">
             <!-- Parallax Image with Group Text -->
             <div class="bgimg-2 w3-display-container w3-opacity-min w3-greyscale-min" style="background-image: url('/img/{{ group.name | slugify }}.jpg')">
-                <div class="w3-display-middle">
-                    <h3 class="w3-xxlarge w3-text-white w3-wide" style="font-weight:700;">{{ group.name }}</h3>
+                <div class="w3-display-middle" style="width:80%;">
+                    <h3 class="w3-center w3-padding-large w3-xlarge w3-text-white w3-wide" style="font-weight:700;text-transform:uppercase;">{{ group.name }}</h3>
+
                 </div>
             </div>
 
