--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: home
     <div class="w3-display-middle" style="white-space:nowrap;">
         <!--span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">J&amp;J Trekking</span-->
         <h1>
-            <img style="width:100%" src="/img/jjtrekking-logo.png" alt="J&amp;J Trekking">
+            <img class="w3-image" src="/img/jjtrekking-logo.png" alt="J&amp;J Trekking">
         </h1>
     </div>
 </div>
