--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ layout: home
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+    <div class="w3-display-topmiddle" style="white-space:nowrap;">
+        <img class="w3-image" src="/img/jjtrekking-logo.png" alt="J&amp;J Trekking">
+    </div>
     <div class="w3-display-middle" style="white-space:nowrap;">
-        <!--span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">J&amp;J Trekking</span-->
-        <h1>
-            <img class="w3-image" src="/img/jjtrekking-logo.png" alt="J&amp;J Trekking">
-        </h1>
+        <h1 class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">J&amp;J Trekking</h1>
     </div>
 </div>
 
