--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: home
 ---
 
-
-<!-- First Parallax Image with Logo Text -->
+<!-- Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
     <div class="w3-display-topmiddle" style="white-space:nowrap;">
         <img class="w3-image" src="/img/jjtrekking-logo.png" alt="J&amp;J Trekking">
@@ -21,7 +20,7 @@ layout: home
   <p class="w3-center w3-medium"><em>Guido Rey</em></p>
 </div>
 
-<!-- Container (Tracks Section) -->
+<!-- Container (Tracks Head Section) -->
 <div class="w3-content w3-container w3-padding-32" id="tracks">
     <h3 class="w3-center w3-xxlarge w3-wide">ITINERARI</h3>
 </div>
@@ -30,10 +29,8 @@ layout: home
 {% assign groups = tracks | group_by: "gruppo" | sort: "nome" %}
 
 <!-- Container (Tracks Section) -->
-
 {% for group in groups %}
-
-    <div class="w3-content w3-container w3-padding-32" style="max-width:1280px" id="tracks-{{ group.name }}">
+    <div class="w3-content w3-container w3-padding-32" style="max-width:1280px" id="track-{{ group.name }}">
 
         <div class="w3-card-2 w3-margin">
             <!-- Parallax Image with Group Text -->
