--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: home
 {% for group in groups %}
     <div class="w3-content w3-container w3-padding-32" style="max-width:1280px" id="track-{{ group.name }}">
 
-        <div class="w3-card-2 w3-margin">
+        <div class="w3-card w3-margin">
             <!-- Parallax Image with Group Text -->
             <div class="bgimg-2 w3-display-container w3-opacity-min w3-greyscale-min" style="background-image: url('/img/{{ group.name | slugify }}.jpg')">
                 <div class="w3-display-middle" style="width:100%;">
